# deeptuuk_nav_test

deeptuuk_nav/: CMakeLists.txt  package.xml
deeptuuk_nav/launch/sim/: sim.launch  sim_with_global_planner.launch  sim_with_joy.launch
deeptuuk_nav/maps/: test.yaml
deeptuuk_nav/maps/code/: a.out  a.pgm  test.cpp
deeptuuk_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
move_base_plugins/deeptuuk_global_planner/: CMakeLists.txt  deeptuuk_global_planner_plugin.xml  package.xml
move_base_plugins/deeptuuk_global_planner/include/deeptuuk_global_planner/: global_planner.h
move_base_plugins/deeptuuk_global_planner/src/: global_planner.cpp
move_base_plugins/deeptuuk_local_planner/: CMakeLists.txt  deeptuuk_local_planner_plugin.xml  package.xml
move_base_plugins/deeptuuk_local_planner/include/deeptuuk_local_planner/: local_planner.h
move_base_plugins/deeptuuk_local_planner/src/: local_planner.cpp
ros_model/my_model/launch/: my_pi_gazebo.launch
ros_model/my_model/rviz/: my_model.rviz
ros_model/my_model/urdf/: my_pi.xacro  my_pi_with_rplidar.xacro  my_robot.xacro  my_robot_with_rplidar.xacro  rplidar.xacro
